--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+  font-family: 'PT Sans', sans-serif;
 }
