--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer-container {
-    background-color: #242424;
+    /* background-color: #242424; */
+    background: linear-gradient(90deg, rgba(247, 105, 43, 1) 0%, rgba(252, 132, 69, 1) 100%);
     padding: 4rem 0 2rem 0;
     display: flex;
     flex-direction: column;
@@ -79,7 +80,7 @@
 }
 
 .footer-link-items a:hover {
-    color: #e9e9e9;
+    color: #242424;
     transition: 0.3s ease-out;
 }
 
@@ -129,6 +130,10 @@
     display: flex;
     align-items: center;
     margin-bottom: 16px;
+}
+
+.social-icons :hover {
+    color: #b6081f;
 }
 
 .website-rights {
