--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,13 +1,24 @@
+.nav-wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1.5rem;
+  background: linear-gradient(90deg, rgba(247, 105, 43, 1) 0%, rgba(252, 132, 69, 1) 100%);
+}
+
 .navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  background: linear-gradient(90deg, rgba(247, 105, 43, 1) 0%, rgba(252, 132, 69, 1) 100%);
+  width: 100%;
   height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
+  position: sticky;
+  top: 0;
 }
 
 .navbar-logo {
+  width: 200px;
   color: #fff;
   justify-self: start;
   margin-left: 20px;
@@ -45,7 +56,7 @@
 }
 
 .nav-links:hover {
-  background-color: #1888ff;
+  background-color: #b6081f;
   border-radius: 4px;
   transition: all 0.2s ease-out;
 }
@@ -78,7 +89,7 @@
     transition: all 0.5s ease;
   }
   .nav-menu.active {
-    background: #242222;
+    background: linear-gradient(90deg, rgba(247, 98, 60, 1) 0%, rgba(209, 55, 0, 0.9591266556291391) 100%);
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
@@ -91,7 +102,7 @@
     display: table;
   }
   .nav-links:hover {
-    background-color: #1888ff;
+    background-color: #b6081f;
     border-radius: 0;
   }
   .navbar-logo {
@@ -120,14 +131,14 @@
     margin: 2rem auto;
     border-radius: 4px;
     width: 80%;
-    background: #1888ff;
+    background: #b6081f;
     text-decoration: none;
     color: #fff;
     font-size: 1.5rem;
   }
   .nav-links-mobile:hover {
     background: #fff;
-    color: #1888ff;
+    color: #b6081f;
     transition: 250ms;
   }
   button {
