--- a/src/Components/Events/Events.css
+++ b/src/Components/Events/Events.css
@@ -1,15 +1,16 @@
 .events-component {
     height: 30vh;
-    background: linear-gradient(90deg, rgb(214, 214, 214) 0%, rgb(214, 214, 214) 100%);
+    background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
     padding: 10px 20px;
 }
 
 .event-menu {
     display: flex;
+    flex-direction: row;
     list-style: none;
     text-align: center;
     width: 100vw;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 .event-item {
@@ -19,7 +20,7 @@
 }
 
 .event-links {
-    color: #fff;
+    color: #b6081f;
     text-decoration: none;
     padding: 0.5rem 1rem;
     font-size: 1.3rem;
@@ -30,4 +31,10 @@
     color: #fff;
     border-radius: 4px;
     transition: all 0.2s ease-out;
+}
+
+@media screen and (max-width: 960px) {
+    .event-menu {
+        display: none;
+    }
 }
