--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -1,5 +1,5 @@
 .hero-section {
-    background: url('../../assets//images/img-2.jpg') center center/cover no-repeat;
+    background: url('../../assets/images/img-2.jpg') center center/cover no-repeat;
     height: 80vh;
     padding: 8px 20px;
     text-align: center;
@@ -19,10 +19,11 @@
 }
 
 .banner {
-    background: linear-gradient(90deg, rgba(247, 105, 43, 1) 0%, rgba(252, 132, 69, 1) 100%);
+    /*background: linear-gradient(90deg, rgba(247, 105, 43, 1) 0%, rgba(252, 132, 69, 1) 100%);*/
     height: 180px;
     padding: 8px 20px;
     text-align: center;
+    border: 2px solid rgba(247, 105, 43, 1);
     border-radius: 5px;
 }
 
@@ -88,6 +89,9 @@
     }
     .banner-graphics {
         font-size: 1rem;
+    }
+    .banner-content{
+        display: none;
     }
 }
 
