--- a/src/Components/Events/Events.css
+++ b/src/Components/Events/Events.css
@@ -1,29 +1,35 @@
 .events-component {
-    height: 30vh;
+    height: auto;
     background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
-    padding: 10px 20px;
+    padding: 20px 20px;
 }
 
 .event-menu {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    text-align: center;
-    width: 100vw;
-    justify-content: flex-start;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
 }
 
 .event-item {
     display: flex;
     align-items: center;
-    height: 80px;
+    height: auto;
+    text-align: center;
+    cursor: pointer;
+}
+
+.active-event{
+    background-color: #b6081f;
+    color: #fff;
+    border-radius: 4px;
 }
 
 .event-links {
+    width: 100%;
     color: #b6081f;
     text-decoration: none;
     padding: 0.5rem 1rem;
     font-size: 1.3rem;
+    text-align: center;
 }
 
 .event-links:hover {
@@ -35,6 +41,14 @@
 
 @media screen and (max-width: 960px) {
     .event-menu {
-        display: none;
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+}
+
+@media screen and (max-width: 520px){
+    .event-menu {
+        display: grid;
+        grid-template-columns: auto auto;
     }
 }
