--- a/src/Components/HeroSection/styles/HeroSection.css
+++ b/src/Components/HeroSection/styles/HeroSection.css
@@ -1,8 +1,7 @@
 .hero-section {
-    background: url('../../assets/images/img-2.jpg') center center/cover no-repeat;
-    height: 80vh;
+    /*background: url('../../../assets/images/img-2.jpg') center center/cover no-repeat;*/
+    height: 100vh;
     padding: 8px 20px;
-    text-align: center;
     display: flex;
     margin: 0;
     flex-direction: column;
@@ -12,9 +11,10 @@
 }
 
 .video {
-    height: 80vh;
+    height: 100%;
+    width: 100%;
     object-fit: cover;
-    position: fixed;
+    position: absolute;
     z-index: -1;
 }
 
@@ -40,44 +40,26 @@
 }
 
 .hero-deco {
-    background: linear-gradient(90deg, rgba(250, 250, 250, 1) 0%, rgba(240, 240, 240, 0.9591266556291391) 100%);
-    height: 40vh;
+    /*background: linear-gradient(90deg, rgba(250, 250, 250, 1) 0%, rgba(240, 240, 240, 0.9591266556291391) 100%);*/
+    height: 60vh;
     width: 100%;
-    margin: 20px 0px;
+    margin: 10px 10px;
+    padding: 5px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 
-.banner-graphics {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5rem;
-    background-image: url('../../assets/images/img-1.jpg');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: #fff;
-    padding: 8px 20px;
-}
-
-.banner-graphics>h1 {
-    margin-bottom: 15px;
-}
-
 .banner-content {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     align-items: center;
     justify-content: center;
     font-size: 1.5rem;
+    margin-top: 25px;
 }
 
 /* Media Queries */
@@ -90,14 +72,11 @@
     .banner-graphics {
         font-size: 1rem;
     }
-    .banner-content{
-        display: none;
-    }
 }
 
 @media screen and (max-width: 520px) {
     .banner-title {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
     .banner-text {
         font-size: 1rem;
