--- a/src/Components/Login/styles/style.css
+++ b/src/Components/Login/styles/style.css
@@ -36,6 +36,7 @@
     flex-direction: column;
     align-items: flex-start;
     width: fit-content;
+    margin-bottom: 31px;
 }
 
 .base-container .content .form .form-group label {
@@ -43,6 +44,7 @@
 }
 
 .base-container .content .form .form-group input {
+    flex-direction: column;
     margin-top: 6px;
     min-width: 18em;
     height: 37px;
@@ -52,7 +54,7 @@
     background-color: #f3f3f3;
     border: 0;
     border-radius: 4px;
-    margin-bottom: 31px;
+    /*margin-bottom: 31px;*/
     transition: all 250ms ease-in-out;
 }
 
@@ -62,5 +64,5 @@
 }
 
 .base-container .footer {
-    margin-top: 3em;
+    margin-top: 2em;
 }
