--- a/src/Components/NavBar/styles/Navbar.css
+++ b/src/Components/NavBar/styles/Navbar.css
@@ -1,31 +1,30 @@
-.nav-wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1.5rem;
-  background: linear-gradient(90deg, rgba(247, 105, 43, 1) 0%, rgba(252, 132, 69, 1) 100%);
-}
-
 .navbar {
   background: linear-gradient(90deg, rgba(247, 105, 43, 1) 0%, rgba(252, 132, 69, 1) 100%);
   width: 100%;
-  height: 80px;
+  height: 100px;
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
   align-items: center;
   font-size: 1.2rem;
+  padding: 1rem;
 }
 
 .navbar-logo {
-  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
   color: #fff;
   justify-self: start;
-  margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
+  text-align: center;
   font-size: 1.5rem;
 }
 
-.fa-firstdraft {
+.logo-icon {
   margin-left: 0.5rem;
   font-size: 1.6rem;
 }
@@ -44,7 +43,7 @@
 .nav-item {
   display: flex;
   align-items: center;
-  height: 80px;
+  height: 100px;
 }
 
 .nav-links {
@@ -72,11 +71,22 @@
   display: none;
 }
 
+.user-icon{
+  color: #fff;
+  cursor: pointer;
+  transform: scale(1.8);
+}
+
 .menu-icon {
   display: none;
 }
 
 @media screen and (max-width: 960px) {
+
+  .user-icon-container{
+    display: none;
+  }
+
   .NavbarItems {
     position: relative;
   }
@@ -86,7 +96,7 @@
     width: 100%;
     height: 90vh;
     position: absolute;
-    top: 80px;
+    top: 100px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
@@ -109,10 +119,13 @@
     border-radius: 0;
   }
   .navbar-logo {
+    display: block;
     position: absolute;
     top: 0;
     left: 0;
-    transform: translate(25%, 50%);
+    transform: translate(0%, 80%);
+    font-size: 1.8rem;
+    cursor: pointer;
   }
   .menu-icon {
     display: block;
