--- a/src/Components/Widgets/All/AllEvents.css
+++ b/src/Components/Widgets/All/AllEvents.css
@@ -1,4 +1,30 @@
 .all-events-container {
-    height: 100vh;
-    background-color: greenyellow;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: auto auto auto;
+    height: auto;
+    background-color: #ffffff;
+    padding: 10px;
+}
+
+@media screen and (max-width: 768px){
+    .all-events-container {
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: auto auto;
+        height: auto;
+        background-color: #ffffff;
+        padding: 10px;
+    }
+}
+
+@media screen and (max-width: 520px){
+    .all-events-container {
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: auto;
+        height: auto;
+        background-color: #ffffff;
+        padding: 10px;
+    }
 }
