--- a/src/Components/Widgets/Today/Today.css
+++ b/src/Components/Widgets/Today/Today.css
@@ -1,4 +1,9 @@
 .today-events-container {
-    height: 100vh;
-    background-color: red;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: auto auto auto;
+    height: auto;
+    background-color: #ffffff;
+    padding: 10px;
 }
+
