--- a/src/Components/NavBar/styles/Navbar.css
+++ b/src/Components/NavBar/styles/Navbar.css
@@ -20,8 +20,9 @@
   justify-self: start;
   cursor: pointer;
   text-decoration: none;
-  text-align: center;
+  text-align: start;
   font-size: 1.5rem;
+  padding-left: 10px;
 }
 
 .logo-icon {
@@ -37,7 +38,7 @@
   text-align: center;
   width: 70vw;
   justify-content: end;
-  margin-right: 2rem;
+  margin-right: 1rem;
 }
 
 .nav-item {
@@ -72,6 +73,8 @@
 }
 
 .user-icon{
+  height: 100px;
+  margin-right: 10px;
   color: #fff;
   cursor: pointer;
   transform: scale(1.8);
