--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -10,15 +10,21 @@
     width: 30vw;
     height: 50px;
     border-radius: 5px;
-    border: 1px solid #b6081f;
+    border: 1px solid #FFFFFF;
     padding: 8px 20px;
-    box-shadow: 0 0 5px #b6081f;
+    background: rgba(247, 98, 60, 1);
+    color: #242424;
 }
+
+.search-bar::placeholder{
+    color: #fff;
+}
+
 
 .search-bar:focus {
     outline: none !important;
-    border: 1px solid #b6081f;
-    box-shadow: 0 0 5px #b6081f;
+    border: 1px solid #ffffff;
+    box-shadow: 0 0 5px rgba(247, 98, 60, 1);
 }
 
 
@@ -27,5 +33,3 @@
         display: none;
     }
 }
-
-@media screen and (max-width: 520px) {}
