--- a/src/Components/Login/styles/style.css
+++ b/src/Components/Login/styles/style.css
@@ -7,6 +7,7 @@
 
 .base-container .header {
     font-size: 24px;
+    margin-bottom: 25px;
     font-family: "Open Sans", sans-serif;
 }
 
@@ -65,4 +66,42 @@
 
 .base-container .footer {
     margin-top: 2em;
+}
+
+.btn-log-reg{
+    display: none;
+}
+
+@media screen and (max-width: 520px){
+    .base-container{
+        padding: 10px;
+    }
+
+    .base-container .content .image{
+        width: 18em;
+    }
+
+    .base-container .content .image img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .btn-log-reg{
+        display: block;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        font-size: 18px;
+        padding: 5px 20px;
+        text-decoration: none;
+        border: 0;
+        color: rgba(247, 98, 60, 1);
+        border-radius: 5px;
+        transition: all 250ms ease-in-out;
+        cursor: pointer;
+    }
+
+    .register-text{
+        margin-left: 10px;
+    }
+
 }
