--- a/src/Components/Events/Events.css
+++ b/src/Components/Events/Events.css
@@ -1,5 +1,6 @@
 .events-component {
     height: auto;
+    width: 100%;
     background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
     padding: 20px 20px;
 }
@@ -18,14 +19,16 @@
 }
 
 .active-event{
-    background-color: #b6081f;
+    background-color: rgba(247, 105, 43, 1);
     color: #fff;
-    border-radius: 4px;
+}
+
+.active-event .event-links{
+    color: #fff;
 }
 
 .event-links {
     width: 100%;
-    color: #b6081f;
     text-decoration: none;
     padding: 0.5rem 1rem;
     font-size: 1.3rem;
@@ -35,7 +38,6 @@
 .event-links:hover {
     background-color: #b6081f;
     color: #fff;
-    border-radius: 4px;
     transition: all 0.2s ease-out;
 }
 
