--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -15,8 +15,10 @@
     align-items: center;
 }
 
-.logo-icon{
+.footer-logo-icon{
     color: #fff;
+    transform: scale(1.3);
+    margin-left: 10px;
     cursor: pointer;
 }
 
@@ -47,13 +49,12 @@
 
 .footer-input {
     padding: 8px 20px;
-    border-radius: 2px;
+    border-radius: 4px;
     margin-right: 10px;
     outline: none;
-    border: none;
     font-size: 18px;
     margin-bottom: 16px;
-    border: 1px solid #fff;
+    border: 1px solid #b6081f;
 }
 
 .footer-links {
