--- a/src/Components/Widgets/Weekend/WeekEnd.css
+++ b/src/Components/Widgets/Weekend/WeekEnd.css
@@ -6,3 +6,9 @@
     background-color: #ffffff;
     padding: 10px;
 }
+
+.section-title{
+    padding: 15px;
+    color: #b6081f;
+    font-size: 22px;
+}
